# hardig

./: .gitignore  Anchor.toml  CLAUDE.md  Cargo.toml  INTEGRATION.md  LICENSE  README.md
.claude/: settings.json
assets/: collection-metadata.json  key-nft-metadata.json
crates/tui/: Cargo.toml
crates/tui/src/: app.rs  main.rs  ui.rs
docs/: artwork-marketplace-design.md  demo-video-plan.md  promo-campaign.md  recovery-key-design.md
programs/hardig/: Cargo.toml
programs/hardig/src/: artwork.rs  errors.rs  lib.rs  state.rs
programs/hardig/src/instructions/: accept_admin.rs  add_trusted_provider.rs  authorize_key.rs  borrow.rs  buy.rs  configure_recovery.rs  consume_rate_limit.rs  create_collection.rs  create_market_config.rs  create_position.rs  execute_recovery.rs  heartbeat.rs  init_mayflower_position.rs  initialize_protocol.rs  migrate_config.rs  mod.rs  reinvest.rs  remove_trusted_provider.rs  repay.rs  revoke_key.rs  set_position_artwork.rs  transfer_admin.rs  validate_key.rs  withdraw.rs
programs/hardig/src/instructions/promo/: claim_promo_key.rs  create_promo.rs  mod.rs  update_promo.rs
programs/hardig/src/mayflower/: constants.rs  cpi_accounts.rs  floor.rs  mod.rs
programs/hardig/src/state/: mod.rs  promo.rs
programs/hardig/tests/: integration.rs  mainnet_fork.rs
scripts/: deploy-mainnet.sh  start-mainnet-fork.sh
test-programs/mock-mayflower/: Cargo.toml
test-programs/mock-mayflower/src/: lib.rs
tests/: hardig.ts
web-lite/: index.html  markets.json.example  package-lock.json  package.json  vite.config.js
web-lite/src/: app.jsx  constants.js  discovery.js  idl.json  main.jsx  markets.js  mayflower.js  program.js  rateLimits.js  resolveMarket.js  rpc.js  state.js  style.css  utils.js
web-lite/src/components/: ActionBar.jsx  ActionModal.jsx  ClusterSelector.jsx  Dashboard.jsx  KeyringTable.jsx  LogPanel.jsx  MayflowerPanel.jsx  PositionPanel.jsx  PositionSelector.jsx  PromoPanel.jsx  WalletButton.jsx
web-lite/src/instructions/: authorizeKey.js  borrow.js  buy.js  createMarketConfig.js  createPosition.js  createPromo.js  index.js  initMayflowerPosition.js  initializeProtocol.js  reinvest.js  repay.js  revokeKey.js  setup.js  updatePromo.js  withdraw.js
