[package]
name = "hardig"
version = "1.0.0"
description = "Created with Anchor"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib", "lib"]
name = "hardig"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []


[dependencies]
anchor-lang = "0.32.1"
anchor-spl = { version = "0.32.1", features = ["token", "associated_token"] }
mpl-core = "0.11"
blake3 = "=1.8.2"
rmp-serde = "=1.3.0"
rmp = "=0.8.14"


[dev-dependencies]
litesvm = "0.7.1"
solana-sdk = "2.3"
solana-client = "2.3"
spl-token = "8"
spl-associated-token-account = "6"
anchor-lang = "0.32.1"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
